# app/controllers/application_controller.rb
@@ -12,7 +12,11 @@ class ApplicationController < ActionController::API
   ## Global Rescue Statements ##
   ##############################
 
+  rescue_from ActionController::ParameterMissing, with: :missing_params
+  rescue_from ActiveRecord::RecordNotFound, with: :not_found
   rescue_from Pundit::NotAuthorizedError, with: :not_authorized
+  rescue_from ActiveRecord::RecordInvalid, with: :not_processable
+  rescue_from ActiveRecord::DeleteRestrictionError, with: :not_processable
   rescue_from NotImplementedError, with: :endpoint_not_implemented
 
   ######################
@@ -25,20 +29,42 @@ class ApplicationController < ActionController::API
   ## Global Methods ##
   ####################
 
+  # 400
+  def missing_params
+    render json: { error: 'You must pass parameters to this endpoint' },
+      status: :bad_request
+  end
+
   # Fun fact, 401 is called unauthorized, but is used to indicate
   # unauthenticated errors. 403 is called forbidden, and used for unauthorized
   # errors. Yes, this does indeed irritate me to no end.
 
+  # 401
   def not_authenticated
     render json: { error: 'Access token is missing or invalid' },
       status: :unauthorized
   end
 
+  # 403
   def not_authorized
-    render json: { error: 'You don\'t have permission to do that.' },
+    render json: { error: 'You don\'t have permission to do that' },
       status: :forbidden
   end
 
+  # This technically leaks the existance of records which is not ideal. That
+  # said, fuck the hackers I want my good status codes (for now).
+  # 404
+  def not_found
+    render json: { error: 'Resource not found' },
+      status: :not_found
+  end
+
+  # 422
+  def not_processable(err)
+    render json: { error: err.message }, status: :unprocessable_entity
+  end
+
+  # 501
   def endpoint_not_implemented(err)
     render json: { error: err.message }, status: :not_implemented
   end
