# app/controllers/lists_controller.rb
@@ -1,0 +1,51 @@
+class ListsController < ApplicationController
+  before_action :set_list, except: [:index, :create]
+
+  def index
+    authorize List
+
+    @lists = policy_scope(List).order(order: :asc, id: :asc)
+  end
+
+  def show
+    authorize @list
+  end
+
+  def create
+    @list = List.new(list_params)
+    @list.user = current_user
+
+    authorize @list
+
+    @list.save!
+
+    render :show
+  end
+
+  def update
+    authorize @list
+
+    @list.update!(list_params)
+
+    render :show
+  end
+
+  def destroy
+    authorize @list
+
+    @list.destroy!
+
+    head :ok
+  end
+
+  private
+
+  def set_list
+    list_id = params[:list_id] || params[:id]
+    @list = List.find(list_id)
+  end
+
+  def list_params
+    params.require(:list).permit(:title, :order)
+  end
+end
